--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@emanprague/eslint-config",
-  "version": "1.0.2",
+  "version": "2.0.0",
   "description": "ESlint and prettier configurations",
   "main": "eslint-config.js",
   "repository": "https://github.com/eManPrague/eslint-config.git",
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dist": "rm -rf dist && mkdir dist && cp prettier-config.js dist/ && cp eslint-default.js dist/ && cp tslint.json dist/"
+    "dist": "rm -rf dist && mkdir dist && cp prettier-config.js dist/ && cp eslint-default.js dist/"
   },
   "keywords": [
     "tslint",
@@ -19,16 +19,19 @@
   "author": "Augustin Sulc <augustin.sulc@eman.cz>",
   "license": "MIT",
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.18.0",
-    "@typescript-eslint/eslint-plugin-tslint": "^2.18.0",
-    "@typescript-eslint/parser": "^2.18.0",
-    "eslint-config-prettier": "^6.9.0",
-    "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-react": "^7.18.0",
-    "tslint": "^5.14.0",
-    "tslint-sonarts": "^1.9.0"
+    "@typescript-eslint/eslint-plugin": "^4.9.1",
+    "@typescript-eslint/parser": "^4.9.1",
+    "eslint": "^7.15.0",
+    "eslint-config-prettier": "^7.0.0",
+    "eslint-plugin-prettier": "^3.2.0",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-typescript": "^0.14.0"
   },
   "peerDependencies": {
-    "eslint": "^6.8.0"
+    "eslint": "^7.15.0",
+    "typescript": "4"
+  },
+  "devDependencies": {
+    "@types/eslint": "^7.2.6"
   }
 }
