--- a/package.json
+++ b/package.json
@@ -18,17 +18,14 @@
   ],
   "author": "Augustin Sulc <augustin.sulc@eman.cz>",
   "license": "MIT",
-  "dependencies": {
+  "peerDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.9.1",
     "@typescript-eslint/parser": "^4.9.1",
     "eslint": "^7.15.0",
     "eslint-config-prettier": "^7.0.0",
     "eslint-plugin-prettier": "^3.2.0",
     "eslint-plugin-react": "^7.21.5",
-    "eslint-plugin-sonarjs": "^0.5.0"
-  },
-  "peerDependencies": {
-    "eslint": "^7.15.0",
+    "eslint-plugin-sonarjs": "^0.5.0",
     "typescript": "4"
   },
   "devDependencies": {
