--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@emanprague/eslint-config",
-  "version": "2.2.0",
+  "version": "2.3.0",
   "description": "ESlint and prettier configurations",
   "main": "eslint-config.js",
   "repository": "https://github.com/eManPrague/eslint-config.git",
@@ -18,17 +18,19 @@
   ],
   "author": "Augustin Sulc <augustin.sulc@eman.cz>",
   "license": "MIT",
-  "peerDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.9.1",
-    "@typescript-eslint/parser": "^4.9.1",
-    "eslint": "^7.15.0",
-    "eslint-config-prettier": "^7.0.0",
-    "eslint-plugin-prettier": "^3.2.0",
+  "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.2.0",
+    "@typescript-eslint/parser": "^5.2.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.21.5",
-    "eslint-plugin-sonarjs": "^0.5.0",
+    "eslint-plugin-sonarjs": "^0.10.0",
     "typescript": "4"
   },
+  "peerDependencies": {
+    "eslint": "^7.15.0"
+  },
   "devDependencies": {
-    "@types/eslint": "^7.2.6"
+    "@types/eslint": "^7.28.2"
   }
 }
