--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@emanprague/eslint-config",
-  "version": "2.3.0",
+  "version": "2.4.0",
   "description": "ESlint and prettier configurations",
   "main": "eslint-config.js",
   "repository": "https://github.com/eManPrague/eslint-config.git",
@@ -21,16 +21,14 @@
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^5.2.0",
     "@typescript-eslint/parser": "^5.2.0",
+    "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-sonarjs": "^0.10.0",
-    "typescript": "4"
+    "typescript": "^4.4.4"
   },
   "peerDependencies": {
     "eslint": "^7.15.0"
-  },
-  "devDependencies": {
-    "@types/eslint": "^7.28.2"
   }
 }
