--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@emanprague/eslint-config",
-  "version": "4.0.0",
+  "version": "3.4.1",
   "description": "ESlint and prettier configurations",
   "main": "eslint-config.js",
   "repository": "https://github.com/eManPrague/eslint-config.git",
@@ -19,22 +19,22 @@
   "author": "Augustin Sulc <augustin.sulc@eman.cz>",
   "license": "MIT",
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^6.13.2",
-    "@typescript-eslint/parser": "^6.13.2",
+    "@typescript-eslint/eslint-plugin": "^7.6.0",
+    "@typescript-eslint/parser": "^7.6.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-jest": "^27.6.0",
-    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-jest": "^28.2.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-sonarjs": "^0.23.0",
-    "eslint-plugin-storybook": "^0.6.15",
+    "eslint-plugin-sonarjs": "^0.25.1",
+    "eslint-plugin-storybook": "^0.8.0",
     "eslint-plugin-unused-imports": "^3.0.0",
-    "eslint-plugin-vitest": "^0.3.20",
-    "typescript": "^5.3.3"
+    "eslint-plugin-vitest": "~0.4.1",
+    "typescript": "^5.4.4"
   },
   "peerDependencies": {
     "eslint": "^8.01.0",
     "jest": "^29.7.0",
-    "prettier": "^2.8.0"
+    "prettier": "^3.2.5"
   }
 }
