--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@emanprague/eslint-config",
-  "version": "4.0.0",
+  "version": "4.1.0",
   "description": "ESlint and prettier configurations",
   "main": "eslint-config.js",
   "repository": "https://github.com/eManPrague/eslint-config.git",
@@ -19,17 +19,21 @@
   "author": "Augustin Sulc <augustin.sulc@eman.cz>",
   "license": "MIT",
   "dependencies": {
+    "@stylistic/eslint-plugin-js": "^2.12.1",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "@typescript-eslint/parser": "^6.13.2",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
+    "eslint-plugin-i18next": "^6.1.1",
     "eslint-plugin-jest": "^27.6.0",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-sonarjs": "^0.23.0",
     "eslint-plugin-storybook": "^0.6.15",
     "eslint-plugin-unused-imports": "^3.0.0",
     "eslint-plugin-vitest": "^0.3.20",
+    "react-server-components": "^0.0.0",
     "typescript": "^5.3.3"
   },
   "peerDependencies": {
